Ajout du fichier script.js pour gérer les requêtes API

--- a/SITE E-COMMERCE/index.html
+++ b/SITE E-COMMERCE/index.html
@@ -88,5 +88,6 @@
       </dialog>
     </main>
     <script type="module" src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
